# test_framework

./: .gitignore  README.md  app.py  db_editor.ipynb  main.py  mlflow.db  pyproject.toml  requirements.txt  results.db  server.py
conversation/: Conversation_10_Terminal_Block.json  Conversation_11_Switch_Housing_Cover.json  Conversation_12_buffer_optical_cable.json  Conversation_13_loose_tube_optical_cable.json  Conversation_14_Type_C_connector.json  Conversation_15_RCBO..json  Conversation_16_DDR_Connector.json  Conversation_17_CPU_Sockets.json  Conversation_18_Rogowski_sensor.json  Conversation_19_battery_cover.json  Conversation_1_UTH_Automotive_Connector.json  Conversation_20_Cable_Gland.json  Conversation_21_charging_plug.json  Conversation_2_circuit_breaker_bobbin.json  Conversation_3_BTB_connector.json  Conversation_4_CCM_fixed_focus.json  Conversation_5_Appliance_Connector.json  Conversation_6_Fuse_Switch.json  Conversation_7_Radome.json  Conversation_8_HV_Connector.json  Conversation_9_Controller_Seal.json
core/: __init__.py  config.py  das_client.py  db.py  evaluator.py  loader.py  mlflow_client.py  reporter.py  testdata.py  tester.py
groundTruth/: applicationGradeChemille.json  expectedGradeHisto.json  expectedGrades.json  expected_grades.json  groundTruthApplicationContext.json  groundTruthAssumption.json
pdf/: pdfToJson.py
static/: app.js  style.css
templates/: index.html
test_agents/: __init__.py  assumption_evaluator.py  grade_evaluator.py  simulator.py
