[project]
name = "applicationcontextagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "httpx>=0.28.1",
    "mlflow>=3.1.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.11.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3",
    "pdfplumber>=0.11.9",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "flask>=3.0.0",
]
